--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,15 @@
 <html>
 	<head>
 		<title>German Whale of Mystery</title>
+
+        <style>
+            body { margin: 0; }
+        </style>
 	</head>
+    <body>
+
+        <script src="js/jquery-1.10.2.min.js"></script>
+        <script src="js/pixi.dev.js"></script>
+        <script src="js/main.js"></script>
+    </body>
 </html>
