--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,15 @@
 <html>
 	<head>
 		<title>German Whale of Mystery</title>
-
-        <style>
-            body { margin: 0; }
-        </style>
+        <link rel="stylesheet" href="css/main.css">
 	</head>
     <body>
+        <!-- The game object, vertically and horizontally centered. -->
+        <div class="center-outer">
+            <div class="center-inner">
+                <canvas id="game"></canvas>
+            </div>
+        </div>
 
         <script src="js/jquery-1.10.2.min.js"></script>
         <script src="js/pixi.dev.js"></script>
