Proof of concept kepresses

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
         </div>
 
         <script src="js/jquery-1.10.2.min.js"></script>
+        <script src="js/jquery.hotkeys.js"></script>
         <script src="js/pixi.dev.js"></script>
         <script src="js/main.js"></script>
     </body>
