--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <html>
-    <head>
-      <title>German Whale of Mystery</title>
-    </head>
+	<head>
+		<title>German Whale of Mystery</title>
+	</head>
+
+  <body style="margin:0;">
+      <div id="whale" style="width:100%;height:100%;"></div>
+
+			<!-- grunt-processhtml: grab almond build of main.js -->
+			<script src="js/main.js"></script>
+	</body>
+	
 </html>
